# PortafolioProgramacionEstructurada

./: CMakeLists.txt
ActividadesFundamentales/: 19_ordenamiento.c  1_lee_numero.c  21_desviacion.c  suma_matriz.c
Medio Curso/: volumen_esfera.c
Medio Curso/par_impar/: par_impar.c
Medio Curso/triangulo/: area_triangulo.c  triangulo.rap
Medio Curso/volumen_esfera/: volumen_esfera.c
MedioCurso/: ejercicio22.c  ejercicio37.c  ejercicio39.c  ejercicio44.c  tipo_de_triangulo.c
MedioCurso/contador_pares_impares/: Contador_pares_impares.rap  contador_pares_impares.c
MedioCurso/ejercicio22/: ejercicio22.c
MedioCurso/ejercicio33/: Prueba de Escritorio.xlsx  ejercicio33.c  ejercicio33.rap
MedioCurso/ejercicio35/: Prueba de Escritorio.xlsx  ejercicio35.c  ejercicio35.rap
MedioCurso/ejercicio43/: ejercicio43.c  ejercicio43.rap
MedioCurso/ejercicio45/: ejercicio45.c  ejercicio45.rap
MedioCurso/estatuto_for/: estatuto_for.c  estatuto_for.rap
MedioCurso/par_impar/: par_impar.rap
MedioCurso/promedios_de_examen/: promedio_de_examen.c  promedio_de_examen.rap
MedioCurso/suma/: suma.c  suma.rap
MedioCurso/suma_cien/: suma_cien.c  suma_cien.rap
MedioCurso/tipo_de_triangulo/: tipo_de_triangulo.c
MedioCurso/triangulo/: triangulo.c
MedioCurso/volumen_esfera/: volumen_esfera.c  volumen_esfera.rap
Ordinario/: array_average.c  arreglos1.c  diagonal_sum.c  ejercicio9.c  higher_num.c  matriz2.c  matriz3.c  promedios.c  ulam_series.c
Ordinario/Arreglos 2/: arreglo2.c  arreglo2.rap
Ordinario/Desviacion Estandar/: Desviacion Estandar.c  Desviacion Estandar.rap
Ordinario/Fibonacci/: fibonacci2.c  fibonacci2.rap
Ordinario/Tablas de Multiplicar/: tablas.c  tablas.rap
Ordinario/arreglos_bicimencionales/: arreglos_bidimencionales.c  arreglos_bidimencionales.rap
Ordinario/bubble_sort/: bubble_sort.c  bubble_sort.rap
Ordinario/ejercicio44/: ejercicio44.c  ejercicio44.rap
