cmake_minimum_required(VERSION 3.9)
project(ProgramacionEstructurada C)
set(CMAKE_C_STANDARD 99)

add_executable(volumen_esfera MedioCurso/volumen_esfera/volumen_esfera.c)
add_executable(triangulo MedioCurso/triangulo/triangulo.c)
add_executable(par_impar MedioCurso/par_impar/par_impar.c)
add_executable(promedios_de_examen MedioCurso/promedios_de_examen/promedio_de_examen.c)
add_executable(tipo_de_triangulo MedioCurso/tipo_de_triangulo/tipo_de_triangulo.c)